# zeal-solitaire

./: .gitignore  CMakeLists.txt  README.md
assets/: cards.aseprite  cards.tsx  solitaire.tmx
src/: app_state.h  assets.c  assets.h  audio.c  audio.h  input.c  input.h  main.c  main.h  render.c  render.h  solitaire.c  solitaire.h  splash.c  splash.h
